heading alignment quick fix

--- a/assets/scss/organisms/_text-heading-block.scss
+++ b/assets/scss/organisms/_text-heading-block.scss
@@ -3,6 +3,10 @@
 .text-heading-block {
     $b: &;
 
+    align-items: start;
+    align-content: start;
+
+
     &__content {
         --text-font-size: #{fluid( 1.25, 1.625, false)};
         --text-line-height: 1.6;
